# CelEngine

./: .clang-format  .gitignore  CMakeLists.txt  Config.cmake.in  Doxyfile  readme.md  todo.md  vcpkg.json
assets/: test_cube.glb
docs/html/: _component_array_8h_source.html  _ecs_8h_source.html  _entity_manager_8h_source.html  _helpers_8h_source.html  _locks_8h_source.html  _plugin_8h_source.html  _query_8h_source.html  _resource_manager_8h_source.html  _system_8h_source.html  _system_allocator_8h_source.html  _time_8h_source.html  _types_8h_source.html  _world_8h_source.html  class_cel_1_1_component_array.js  class_cel_1_1_components_manager.js  class_cel_1_1_ecs.html  class_cel_1_1_ecs.js  class_cel_1_1_entity_manager.html  class_cel_1_1_entity_manager.js  class_cel_1_1_i_component_array-members.html  class_cel_1_1_i_component_array.html  class_cel_1_1_i_query.js  class_cel_1_1_plugin-members.html  class_cel_1_1_plugin.html  class_cel_1_1_query_3_01_with_3_01_include_8_8_8_01_4_00_01_without_3_01_exclude_8_8_8_01_4_01_4.js  class_cel_1_1_query_3_01_with_3_01_include_8_8_8_01_4_00_01_without_3_01_exclude_8_8_8_01_4_01_4_1_1_iterator-members.html  class_cel_1_1_query_3_01_with_3_01_include_8_8_8_01_4_01_4.html  class_cel_1_1_query_manager-members.html  class_cel_1_1_query_manager.html  class_cel_1_1_resource_manager.js  class_cel_1_1_schedule_graph-members.html  class_cel_1_1_schedule_graph.js  class_cel_1_1_scheduler.html  class_cel_1_1_system-members.html  class_cel_1_1_system.html  class_cel_1_1_system.js  class_cel_1_1_world.html  class_cel_1_1_world.js  class_i_resource.html  classes.html  (+20 more)
docs/latex/: _components_manager_8h_source.tex  _entity_manager_8h_source.tex  _query_manager_8h_source.tex  _resource_manager_8h_source.tex  _schedule_graph_8h_source.tex  _scheduler_8h_source.tex  _time_8h_source.tex  _types_8h_source.tex  _world_8h_source.tex  class_cel_1_1_component_array.tex  class_cel_1_1_ecs.tex  class_cel_1_1_entity_manager.tex  class_cel_1_1_i_query.tex  class_cel_1_1_i_resource.tex  class_cel_1_1_plugin.tex  class_cel_1_1_query.tex  class_cel_1_1_query_3_01_with_3_01_include_8_8_8_01_4_00_01_without_3_01_exclude_8_8_8_01_4_01_4_1_1_iterator.tex  class_cel_1_1_resource.tex  class_cel_1_1_schedule_graph.tex  class_cel_1_1_scheduler.tex  class_cel_1_1_scheduler_1_1_system_scheduler.tex  class_cel_1_1_time.tex  class_cel_1_1_world.tex  class_i_resource.tex  hierarchy.tex  md_readme.tex  md_todo.tex  struct_cel_1_1_type_list.tex  struct_cel_1_1_with.tex  struct_cel_1_1_without.tex
documentation/html/: _components_manager_8h_source.html  _i_query_8h_source.html  _i_resource_8h_source.html  _query_manager_8h_source.html  _resource_8h_source.html  _schedule_8h_source.html  _schedule_graph_8h_source.html  _scheduler_8h_source.html  annotated.html  annotated_dup.js  class_cel_1_1_component_array-members.html  class_cel_1_1_component_array.html  class_cel_1_1_components_manager-members.html  class_cel_1_1_components_manager.html  class_cel_1_1_ecs-members.html  class_cel_1_1_entity_manager-members.html  class_cel_1_1_i_component_array.js  class_cel_1_1_i_query-members.html  class_cel_1_1_i_query.html  class_cel_1_1_i_resource.html  class_cel_1_1_plugin.js  class_cel_1_1_query.html  class_cel_1_1_query_3_01_with_3_01_include_8_8_8_01_4_00_01_without_3_01_exclude_8_8_8_01_4_01_4-members.html  class_cel_1_1_query_3_01_with_3_01_include_8_8_8_01_4_00_01_without_3_01_exclude_8_8_8_01_4_01_4.html  class_cel_1_1_query_3_01_with_3_01_include_8_8_8_01_4_00_01_without_3_01_exclude_8_8_8_01_4_01_4_1_1_iterator.html  class_cel_1_1_query_3_01_with_3_01_include_8_8_8_01_4_01_4-members.html  class_cel_1_1_resource-members.html  class_cel_1_1_resource.html  class_cel_1_1_resource_manager-members.html  class_cel_1_1_resource_manager.html  class_cel_1_1_schedule_graph.html  class_cel_1_1_scheduler-members.html  class_cel_1_1_scheduler.js  class_cel_1_1_scheduler_1_1_system_scheduler-members.html  class_cel_1_1_scheduler_1_1_system_scheduler.html  class_cel_1_1_system_allocator-members.html  class_cel_1_1_system_allocator.html  class_cel_1_1_system_allocator.js  class_cel_1_1_time-members.html  class_cel_1_1_time.html  (+21 more)
documentation/latex/: _component_array_8h_source.tex  _ecs_8h_source.tex  _helpers_8h_source.tex  _i_query_8h_source.tex  _i_resource_8h_source.tex  _locks_8h_source.tex  _plugin_8h_source.tex  _query_8h_source.tex  _resource_8h_source.tex  _schedule_8h_source.tex  _system_8h_source.tex  _system_allocator_8h_source.tex  annotated.tex  class_cel_1_1_components_manager.tex  class_cel_1_1_i_component_array.tex  class_cel_1_1_query_3_01_with_3_01_include_8_8_8_01_4_00_01_without_3_01_exclude_8_8_8_01_4_01_4.tex  class_cel_1_1_query_3_01_with_3_01_include_8_8_8_01_4_01_4.tex  class_cel_1_1_query_manager.tex  class_cel_1_1_resource_manager.tex  (+12 more)
examples/: CMakeLists.txt  Test.cpp  Test.h
nppBackup/: Doxyfile.2026-04-22_165704.bak  Doxyfile.2026-04-23_184818.bak
shaders/: common.slang  compile_shaders.ps1  input_structures.glsl  mesh copy.slang  mesh.frag  mesh.slang  mesh.vert  shader.frag  shader.vert  skybox.slang  skybox.vert
src/: CMakeLists.txt  Ecs.cpp  ResourceManager.cpp  ScheduleGraph.cpp  SystemManager.cpp  Time.cpp  World.cpp
src/Input/: Input.cpp
src/core/: App.cpp  CorePlugin.cpp  Time.cpp  Transform.cpp  World.cpp
src/ecs/: App.cpp  ComponentsManager.cpp  Ecs.cpp  EntityManager.cpp  EntityManger.cpp  QueryManager.cpp  ScheduleGraph.cpp  Scheduler.cpp  Time.cpp  World.cpp
src/renderer/: AssetServer.cpp  Camera.cpp  CleanupRenderer.cpp  DeletionQueue.cpp  Descriptors.cpp  Draw.cpp  MegaBuffer.cpp  PipelineBuilder.cpp  RenderPlugin.cpp  RendererTypes.cpp  Vma.cpp  VulkanEngine.cpp  VulkanHelpers.cpp  VulkanInitialiser.cpp  VulkanSetup.cpp  VulkanUtils.cpp  Window.cpp
src/renderer/render-graph/: PassBuilder.cpp  PipelineBuilder.cpp
tests/: CMakeLists.txt  HierarchyTests.cpp  HierarchyTests.h  QueryTests.cpp  QueryTests.h  ResourceManagerTests.cpp  ResourceManagerTests.h  SchedulingTests.cpp  SchedulingTests.h  TestHelpers.h  WorldTests.cpp  WorldTests.h
(+101 files in other folders)
